Closed
Bug 1380301
Opened 8 years ago
Closed 8 years ago
Perma Bustage when Gecko moves to 56 in nsDeviceContextSpecWin.h(30): error C2039: 'PDFViaEMFPrintHelper': is not a member of 'mozilla::widget'
Categories
(Core :: Printing: Output, defect, P1)
Core
Printing: Output
Tracking
()
RESOLVED
FIXED
mozilla56
People
(Reporter: cbook, Assigned: fatseng)
References
()
Details
Attachments
(2 files, 1 obsolete file)
uplift simulation from trunk as beta in preparation of the merge from 56 to beta shows bustage like :
z:\build\build\src\widget\windows\nsDeviceContextSpecWin.h(30): error C2039: 'PDFViaEMFPrintHelper': is not a member of 'mozilla::widget'
https://treeherder.mozilla.org/logviewer.html#?job_id=113623229&repo=try
seems windows only but we need to fix this before merge day to avoid tree closures etc
| Reporter | ||
Comment 1•8 years ago
|
||
farmer, Johnathan: can you take a look ? thanks
tracking-firefox56:
--- → ?
Flags: needinfo?(fatseng)
Updated•8 years ago
|
Assignee: nobody → fatseng
Priority: -- → P1
| Assignee | ||
Comment 3•8 years ago
|
||
(In reply to Carsten Book [:Tomcat] from comment #1)
> farmer, Johnathan: can you take a look ? thanks
I will check it soon.
Flags: needinfo?(fatseng)
| Comment hidden (mozreview-request) |
| Comment hidden (mozreview-request) |
| Comment hidden (mozreview-request) |
| Comment hidden (mozreview-request) |
Summary: Perma Bustage when Gecko moves to 56 in sDeviceContextSpecWin.h(30): error C2039: 'PDFViaEMFPrintHelper': is not a member of 'mozilla::widget' → Perma Bustage when Gecko moves to 56 in nsDeviceContextSpecWin.h(30): error C2039: 'PDFViaEMFPrintHelper': is not a member of 'mozilla::widget'
| Assignee | ||
Comment 8•8 years ago
|
||
Comment on attachment 8886024 [details]
Bug 1380301 - Add missing "#ifdef MOZ_ENABLE_SKIA_PDF" to nsDeviceContextSpecWin.h
When Skia PDF build flag is disabled, gecko hit following build error.
I add missing "#ifdef MOZ_ENABLE_SKIA_PDF" to nsDeviceContextSpecWin.h to fix the build break.
11:54:01 INFO - z:\build\build\src\widget\windows\nsDeviceContextSpecWin.h(30): error C2039: 'PDFViaEMFPrintHelper': is not a member of 'mozilla::widget'
11:54:01 INFO - z:\build\build\src\widget\windows\JumpListBuilder.h(28): note: see declaration of 'mozilla::widget'
11:54:01 INFO - z:\build\build\src\widget\windows\nsDeviceContextSpecWin.h(30): error C3646: 'PDFViaEMFPrintHelper': unknown override specifier
11:54:01 INFO - z:\build\build\src\widget\windows\nsDeviceContextSpecWin.h(30): error C4430: missing type specifier - int assumed. Note: C++ does not support default-int
11:54:01 INFO - z:/build/build/src/config/rules.mk:1040: recipe for target 'nsWidgetFactory.obj' failed
11:54:01 INFO - mozmake.EXE[6]: *** [nsWidgetFactory.obj] Error 2
11:54:01 INFO - mozmake.EXE[6]: *** Waiting for unfinished jobs....
Attachment #8886024 -
Flags: review?(cam)
| Comment hidden (mozreview-request) |
| Assignee | ||
Updated•8 years ago
|
Attachment #8886024 -
Attachment is obsolete: true
Attachment #8886024 -
Flags: review?(cam)
| Comment hidden (mozreview-request) |
| Assignee | ||
Updated•8 years ago
|
Attachment #8886034 -
Flags: review?(cam)
| Assignee | ||
Comment 11•8 years ago
|
||
Comment on attachment 8886025 [details]
Bug 1380301 - Add windows.h include to nsLookAndFeel.h
This is another build break.
It misses adding windows.h include in nsLookAndFeel.h
11:54:08 INFO - z:\build\build\src\obj-firefox\dist\include\nsIWindowsRegKey.h(53): error C2061: syntax error: identifier 'HKEY'
11:54:08 INFO - z:\build\build\src\obj-firefox\dist\include\nsIWindowsRegKey.h(54): error C2061: syntax error: identifier 'HKEY'
11:54:08 INFO - z:/build/build/src/config/rules.mk:1040: recipe for target 'Unified_cpp_widget_windows2.obj' failed
11:54:08 INFO - mozmake.EXE[6]: *** [Unified_cpp_widget_windows2.obj] Error 2
11:54:08 INFO - mozmake.EXE[6]: Leaving directory 'z:/build/build/src/obj-firefox/widget/windows'
11:54:08 INFO - z:/build/build/src/config/recurse.mk:73: recipe for target 'widget/windows/target' failed
11:54:08 INFO - mozmake.EXE[5]: *** [widget/windows/target] Error 2
11:54:08 INFO - mozmake.EXE[5]: *** Waiting for unfinished jobs....
Attachment #8886025 -
Flags: review?(cam)
| Assignee | ||
Updated•8 years ago
|
Status: NEW → ASSIGNED
Comment 12•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8886034 [details]
Bug 1380301 - Add missing "#ifdef MOZ_ENABLE_SKIA_PDF" to nsDeviceContextSpecWin.h
https://reviewboard.mozilla.org/r/156820/#review161922
Attachment #8886034 -
Flags: review?(cam) → review+
Comment 13•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8886025 [details]
Bug 1380301 - Add windows.h include to nsLookAndFeel.h
https://reviewboard.mozilla.org/r/156806/#review161924
r=me though make sure you do a build try run because I know that new windows.h inclusions can cause issues due some of the macros it defines.
Attachment #8886025 -
Flags: review?(cam) → review+
| Assignee | ||
Comment 14•8 years ago
|
||
Here is my build try runs.
Enable Skia PDF: https://treeherder.mozilla.org/#/jobs?repo=try&revision=99bbaa474ef3ae787920490cc9c030ed86b38a1c
Disable Skia PDF: https://treeherder.mozilla.org/#/jobs?repo=try&revision=b64ba6d9a1a7a50796aee2d4ee8b64b5ce5be4cb
Comment 15•8 years ago
|
||
Pushed by fatseng@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6ceb427e8afa
Add missing "#ifdef MOZ_ENABLE_SKIA_PDF" to nsDeviceContextSpecWin.h r=heycam
https://hg.mozilla.org/integration/autoland/rev/621c06836799
Add windows.h include to nsLookAndFeel.h r=heycam
| Reporter | ||
Comment 16•8 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/6ceb427e8afa
https://hg.mozilla.org/mozilla-central/rev/621c06836799
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
status-firefox56:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
Comment 17•8 years ago
|
||
Worked fine on jamun. Thank you for the fix!
Updated•8 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•